Kubernetes/Database/Dbgate/yamls/dbgate.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dbgate
  labels:
    name: dbgate
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dbgate
  namespace: dbgate
  labels:
    app: dbgate
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dbgate
  template:
    metadata:
      labels:
        app: dbgate
    spec:
      containers:
        - name: dbgate
          image: dbgate/dbgate:latest
          ports:
            - containerPort: 3000
              name: http
          volumeMounts:
           - mountPath: /root/.dbgate
             name: dbgate-data
      volumes:
      - name: dbgate-data
        persistentVolumeClaim:
          claimName: dbgate-data
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: dbgate
  name: dbgate
  namespace: dbgate
spec:
  ports:
  - name: http
    port: 3000
    protocol: TCP
    targetPort: http
  selector:
    app: dbgate
  type: ClusterIP
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-dbgate-https-redirect
  namespace: dbgate
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-dbgate-security
  namespace: dbgate
spec:
  headers:
    frameDeny: true
    sslRedirect: true
    browserXssFilter: true
    contentTypeNosniff: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 31536000
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dbgate-websecure
  namespace: dbgate 
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`dbgate.domain.com`)
      services:
        - name: dbgate
          port: 3000
            #          serversTransport: traefik-dbgate-transport
      middlewares:
        - name: traefik-dbgate-security
  tls:
    secretName: dbgate-domain
    options:
      name: traefik-dbgate-tlsoptions
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dbgate-web
  namespace: dbgate
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`dbgate.domain.com`)
      services:
        - name: dbgate
          port: 3000
      middlewares:
        - name: traefik-dbgate-https-redirect
